<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/john_credit"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/padding_medium"
        android:text="@string/john_credit"
        android:background="@drawable/selector_cool"/>

    <TextView
        android:id="@+id/kyrsten_credit"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/padding_medium"
        android:text="@string/kyrsten_credit"
        android:background="@drawable/selector_cool"/>

    <TextView
        android:id="@+id/library"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/padding_medium"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:text="@string/libraries_used"
        android:background="@drawable/selector_cool"/>

    <TextView
        android:id="@+id/libraries_used"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:text="@string/libraries"
        android:background="@drawable/selector_cool"/>

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/padding_medium"
        android:text="@string/meh_thanks" />

    <TextView
        android:id="@+id/sauce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:drawableLeft="@drawable/ic_github"
        android:drawablePadding="@dimen/padding_medium"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/sauce"
        android:background="@drawable/selector_cool"/>

</LinearLayout>
</ScrollView>